assets/css/style.scss
---
---

@import "{{ site.theme }}";

header {
    background: rgba(0, 0, 0, 0.1);
    border-right: 1px dashed #b5e853;
    border-bottom: 0;
    padding: 0;
    margin: 0;
    width: 500px;
}

footer {
  margin-left: 40px;
  padding: 20px;
  min-width: 400px;
  width: auto;
}
.container {
  margin-left: 40px;
  padding: 20px;
  min-width: 400px;
}

.full-container {
  display: flex;
  height: 100vh;
}

.custom-sidebar {
  width: 400px; 
  background-color: #282828; 
  border-radius: 5px;
  flex-shrink: 0;   
}

/* 移除 <ul> (列表) 的預設樣式 (點點和縮排) */
.custom-sidebar ul {
  list-style-type: none; /* 移除點點 */
  margin: 0;
  padding: 10px; /* 讓按鈕和邊框有點距離 */
}

/* 側邊欄的連結 <a> */
.custom-sidebar li a {
  display: block; /* 讓連結變成區塊，佔滿整行，方便點擊 */
  padding: 12px 15px;
  color: #e0e0e0; /* 亮的文字顏色 */
  text-decoration: none; /* 移除底線 */
  border-radius: 4px; /* 圓角 */
  font-weight: bold;
}

/* 滑鼠移上去時的 Highligh 效果 */
.custom-sidebar li a:hover {
  background-color: #444;
  color: #fff;
}
 
.main-content {
    flex-grow: 1;         /* 關鍵：讓主內容填滿剩餘的寬度 */
    overflow-y: auto;   /* 關鍵：只讓主內容在Y軸上滾動 */
}

